Bug 64673 - REGRESSION (Safari 5.0.5 - ToT): crash in SVG test http://dev.w3.org/SVG/profiles/1.1F2/test/harness/htmlObjectApproved/styling-pres-02-f.html
Summary: REGRESSION (Safari 5.0.5 - ToT): crash in SVG test http://dev.w3.org/SVG/prof...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: 528+ (Nightly build)
Hardware: Mac (Intel) OS X 10.6
: P1 Normal
Assignee: Rob Buis
URL: http://dev.w3.org/SVG/profiles/1.1F2/...
Keywords: Regression
Depends on: 65266
Blocks:
  Show dependency treegraph
 
Reported: 2011-07-17 15:22 PDT by lars.sonchocky-helldorf
Modified: 2011-07-27 09:56 PDT (History)
5 users (show)

See Also:


Attachments
64673_crash_log (104.17 KB, text/plain)
2011-07-17 15:24 PDT, lars.sonchocky-helldorf
no flags Details
Patch (57.72 KB, patch)
2011-07-18 13:13 PDT, Rob Buis
zimmermann: review+
webkit.review.bot: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description lars.sonchocky-helldorf 2011-07-17 15:22:28 PDT
WebKit nightly crashes on http://dev.w3.org/SVG/profiles/1.1F2/test/harness/htmlObjectApproved/styling-pres-02-f.html See attachment
Comment 1 lars.sonchocky-helldorf 2011-07-17 15:24:44 PDT
Created attachment 101120 [details]
64673_crash_log

crash log of the bug
Comment 2 Alexey Proskuryakov 2011-07-18 10:31:52 PDT
I cannot reproduce in Safari 5.0.5, so marking as regression.
Comment 3 Rob Buis 2011-07-18 13:13:59 PDT
Created attachment 101193 [details]
Patch
Comment 4 WebKit Review Bot 2011-07-18 13:39:05 PDT
Comment on attachment 101193 [details]
Patch

Attachment 101193 [details] did not pass chromium-ews (chromium-xvfb):
Output: http://queues.webkit.org/results/9110516

New failing tests:
svg/W3C-SVG-1.1-SE/styling-pres-02-f.svg
Comment 5 Nikolas Zimmermann 2011-07-19 08:54:28 PDT
Comment on attachment 101193 [details]
Patch

Looks good, r=me.
Comment 6 Rob Buis 2011-07-19 10:29:28 PDT
This got landed in r91269.