2011-07-19  Rob Buis  <rbuis@rim.com>

https://bugs.webkit.org/show_bug.cgi?id=64673
        REGRESSION (Safari 5.0.5 - ToT): crash in SVG test http://dev.w3.org/SVG/profiles/1.1F2/test/harness/htmlObjectApproved/styling-pres-02-f.html

        Reviewed by Nikolas Zimmermann.

        Prevent calling back to the owning SVGTRefElement upon handling DOMSubtreeModified events.

        Test: svg/W3C-SVG-1.1-SE/styling-pres-02-f.svg

        * svg/SVGTRefElement.cpp:
        (WebCore::SubtreeModificationEventListener::handleEvent):

Canonical link: https://commits.webkit.org/80516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91269 268f45cc-cd09-0410-ab3c-d52691b4dbfc